--- a/views/partials/navbar_main.ejs
+++ b/views/partials/navbar_main.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/style.css">
-<nav class="navbar navbar-expand-lg navbar-dark primary mb-5 ">
-    <a class="navbar-brand ps-3" href="/">@&A</a> 
+<nav class="navbar navbar-expand-lg navbar-dark primary mb-4">
+    <a class="navbar-brand ps-3" href="/">Questions&Answer</a> 
     
 </nav>
